# Instinct

./: .gitignore  CODEOWNERS  DOCKER.md  Dockerfile  IMPLEMENTATION.md  KUBERNETES.md  README.md  SECURITY.md  TERRAFORM.md  aurora_orchestrator.py  docker-compose.yml  flask_app.py  mcp-registry.json  prompts.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  slack-app-manifest.yml
.claude-plugin/: marketplace.json
.copilot/: AGENT_GUIDE.md  tasks.md
.copilot/tasks/: 010_ingest_nvd.md  020_alignment.md  030_arbiter.md  040_refractors.md  050_evidence.md  060_notion_sync.md  070_capsules_publish.md  080_cuda_support.md  090_bridge.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: LegendLiftOrchestrator.agent.md
.github/copilot/: instructions.md
.github/workflows/: ci.yml  codeql.yml  container-scan.yml  cross-repo-deploy.yml  neurohumogenistic-ci.yml  notion-sync.yml  publish-capsules.yml  receive-agent-dispatch.yml  trivy.yml
aios-layer/: CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod
aios-layer/.github/workflows/: ci.yml
aios-layer/agent/: config.go  main.go  metrics.go  nvml.go  runtime.go  scheduler.go  scheduler_test.go
aios-layer/agent/internal/config/: config.go
aios-layer/agent/internal/gpu/: discovery.go
aios-layer/agent/internal/policy/: policy.go
aios-layer/agent/internal/runtime/: docker.go
aios-layer/agent/internal/scheduler/: scheduler.go  (+2 more)
aios-layer/benchmarks/: run_benchmark.sh
aios-layer/cli/: main.go
aios-layer/config/: aios.yaml
aios-layer/deploy/: aios-agent.service  docker-compose.yml
aios-layer/deploy/docker/: docker-compose.yaml
aios-layer/deploy/k8s/: aios-agent.yaml
aios-layer/deploy/security/: apparmor.profile  seccomp.json
aios-layer/deploy/systemd/: aios-agent.service
aios-layer/docker/: agent.Dockerfile  cli.Dockerfile  vllm.Dockerfile
aios-layer/docs/: architecture.md  nvidia_setup.md  operations.md  release.md  report.md  roadmap.md  run_report.json  threat-model.md  threat_model.md
aios-layer/scripts/: benchmark.sh  check_prereqs.sh  checks.sh  demo.sh  install.sh  run_checks.sh  run_demo.sh
aios-layer/tests/integration/: demo.sh  stack.sh
aios-layer/ui/: index.html
argo/: README.md  epsilon-sweep-workflow.yaml
blackhorse-kgraph/backend/: .env.template  package.json  schema.sql  server.ts
capsules/: hmoc-0.2.json  lidlift-v1.json  runbooks.json
config/: matter.yaml
cve_matter/: __init__.py  cli.py  constants.py
cve_matter/alignment/: __init__.py  cca.py  procrustes.py
cve_matter/arbiter/: __init__.py  super_learner.py
cve_matter/evidence/: __init__.py  model_selection.py
cve_matter/ingest/: __init__.py  nvd.py
cve_matter/refractors/: __init__.py  epsilon.py
docs/: FLASK_INTEGRATION_SUMMARY.md  MCP_ALPHA_DRP_ARCHITECTURE.md  copilot-agents.md  flask_app_guide.md
frontend/: BlackhorseKGraph.module.css  BlackhorseKGraph.tsx  README.md  index.html  package-lock.json  package.json
frontend/src/: BlackhorseKGraph.module.css  BlackhorseKGraph.tsx  main.tsx
instinct-verify/: README.md  index.html  package.json  tailwind.config.js
instinct-verify/src/: App.tsx  index.css
k8s/: README.md  admission-webhook.yaml  gvisor-runtime.yaml  policy-trigger-crd.yaml
mcp-servers/drp-daf-allocator/: drp-daf-allocator.json
mcp-servers/drp-daf-allocator/scripts/: drp-daf-allocator.mjs
mcp-servers/drp-daf-allocator/src/: drive_ingestion.py  k_graph_mapper.py
mcp-servers/genesis-alpha-mcp/: Dockerfile  alpha_mcp_init.sh  mcp.json
mcp-servers/genesis-alpha-mcp/alpha_mcp_server/: main.py
prompts/: legendary_lidlift_v14.md  micro_core.txt  nano_core.txt
samples/: cve_demo.json
scripts/: README.md  demo_arbiter.py  generate_test_report.py
src/: cli.py  main.py
src/a2a/: __init__.py  celestial.py  ingestion.py
src/agents/neurohumogenistic/: __init__.py  edge_agent.py  frugalgpt_cascade.py  thermodynamic_kernel.py  workspace_orchestrator.py
src/integrations/slack/: __init__.py  blocks.py  event_bridge.py  notifier.py
src/integrations/telemetry/: __init__.py  metrics.py  otel_provider.py
src/integrations/workspace/: __init__.py  client.py  drive.py  gmail.py  keep.py  tasks.py
src/models/: arbiter.py  pareto.py
src/pipelines/: __init__.py  arbiter_demo.py
terraform/: README.md  gke.tf  main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_alignment.py  test_arbiter.py  test_evidence.py  test_flask_integration.py  test_ingest.py  test_refractors.py  test_structure.py
tests/a2a/: test_ingestion.py
tests/agents/neurohumogenistic/: __init__.py  test_edge_agent.py  test_frugalgpt_cascade.py  test_thermodynamic_kernel.py  test_workspace_orchestrator.py
tests/mass/: __init__.py  run_mass_tests.py
tests/mcp/: test_mcp_ouroboros.py
workers/pareto-audit/: package-lock.json  package.json  wrangler.toml
workers/pareto-audit/src/: index.ts  schema.sql
