[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cve-matter-analysis"
version = "0.1.0"
description = "CVE Matter-Analysis OS - Blue-team vulnerability analysis platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Blue Team", email = "security@example.com"}
]
keywords = ["cve", "vulnerability", "analysis", "security", "blue-team"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
cuda = [
    "cupy-cuda12x>=12.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

[project.scripts]
cve-matter = "cve_matter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cve_matter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=cve_matter --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
